# web2product-catalog

./: .gitignore  LICENSE  README.md  analyze_progress.py  pyproject.toml  requirements.txt  requirements.txt.txt  run_crawl.py  test.py
analysis_out/: progress_aggregate.csv  summary.json
analysis_out/interactive/: ecdf_filtered_total.html  funnel_means.html  hist_filtered_total.html  hist_md_suppression.html  scatter_discovered_vs_filtered.html  scatter_throughput_vs_filtered.html
components/: csv_loader.py  llm_extractor.py  md_generator.py  url_seeder.py
extensions/: brand_discovery.py  checkpoint.py  filtering.py  logging.py  output_paths.py  stats_analyzer.py
scraper/: browser.py  config.py  crawler.py  utils.py
scripts/: analyze.py  analyze_output.py  build_company_profile.py  calibrate_state.py  company_profile.py  dataset_partition.py  generate_url_index.py  partition_dataset.py  resume_scraper.py  run.py  run_crawl.py  run_crawler_loop.ps1  run_crawler_loop.sh  run_scraper.py  run_with_retries.ps1  run_with_retries.sh  scan.py  scan_logs.py  utils.py  utils_dataset.py
scripts/components/: csv_loader.py  llm_extractor.py  md_generator.py  source_loader.py  url_seeder.py
scripts/config/: language_settings.py
scripts/configs/: browser.py  browser_settings.py  crawler.py  deep_crawl.py  (+7 more)
tests/: conftest.py  test.csv  test_01.csv  test_02.csv  test_03.csv  test_auth_and_backoff.py  test_browser.py  test_canonical_offsite.py  test_config.py  test_crawler.py  test_frontier_rebuild.py  test_migration_redirects.py  test_probation_302.py  test_utils.py
(+156 files in other folders)
